# sample-size

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  poetry_scripts.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  publish.yml
Simulation Validation/: Validation of test statistics simulation.md
notebooks/performance/: durations.csv  empirical_power.csv  performance.md
notebooks/performance/improved_calculator/: calculator.py  metrics.py  multiple_testing.py
notebooks/performance/legacy_calculator/: calculator.py  metrics.py  multiple_testing.py
notebooks/performance/simulations/: ()-{}.feather  default.feather
sample_size/: metrics.py  metrics_schema.json  multiple_testing.py  multiple_testing_funcs.py  sample_size.py  sample_size_calculator.py  variables.py
sample_size/sample_size_calculator/: sample_size_calculator.py  variables.py
sample_size/scripts/: input_utils.py  multiple_testing_sample_size_calculator.py  sample_size_run.py  utils.py
sample_size/utils/: sample_size_run.py  utils.py
scripts/: sample_size_run.py  utils.py
tests/: test_sample_size.py
tests/sample_size/: test_metrics.py  test_multiple_testing.py  test_sample_size_calculator.py
tests/sample_size/scripts/: test_input_utils.py  test_multiple_testing.py  test_sample_size_run.py  test_utils.py
tests/scripts/: test_sample_size_run.py  test_utils.py
tests/test_sample_size/: test_sample_size_calculator.py  test_variables.py
tests/test_sample_size_calculator/: test_sample_size_calculator.py  test_variables.py
tests/test_scripts/: test_sample_size_run.py  test_utils.py
tests/test_utils/: test_utils.py
